--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -64,7 +64,7 @@
 
                             <div class="contant_box_404">
                                 <h3 class="h2">
-                                    Look like you're lost
+                                    Looks like you're lost
                                 </h3>
 
                                 <p class="text-uppercase">the page you are looking for is not available!</p>
