--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,8 +1,9 @@
 <meta charset="UTF-8">
-<title>Minnesota Realty School</title>
+<title>Shwopp</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
     body {
         padding-top: 50px;
