server updates for guards

--- a/views/error/403.ejs
+++ b/views/error/403.ejs
@@ -132,10 +132,10 @@
 
 <body class="container">
     <div class="error-page">
-        <div>
-            <h1 data-h1="500">500</h1>
-            <p data-p="SERVER ERROR">SERVER ERROR</p>
-            <p data-p="<%= error %>"><%= error %></p>
+        <div> 
+            <h1 data-h1="403">403</h1>
+            <p data-p="FORBIDDEN">FORBIDDEN</p> 
+            <p data-p="<%=error%>"><%=error%></p>  
         </div>
     </div>
     <div id="particles-js"></div>
