--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
-<title>Shwopp</title>
-
+<title>iωeave</title> 
+<link rel="shortcut icon" href="https://res.cloudinary.com/weavemasology/image/upload/v1622449876/logo/favicon_ri8yeb.ico" type="image/x-icon">
+<link rel="icon" href="https://res.cloudinary.com/weavemasology/image/upload/v1622449876/logo/favicon_ri8yeb.ico" type="image/x-icon">
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
