--- a/views/pages/welcome.ejs
+++ b/views/pages/welcome.ejs
@@ -14,7 +14,8 @@
 
     <main>
         <div class="jumbotron">
-            <h1>Silence Is Golden..</h1>
+            <h1>Silence Is Golden..</h1> 
+            <!-- No place is silent if your thoughts are loud - AhmedBaig -->
         </div>
     </main>
 
